@@ -1,6 +1,15 @@
 2009/09/03 (TS):
+ - drvGnrIpBasic.c:
+    o Added support for adding/removing MC addresses from multicast
+      filter.
+    o Use new convenience-wrappers (bsem_create, task_spawn, ...) for
+      semaphore and task creation.
+    o Use new 'task_pseudojoin' facility to synchronize with driver
+      task termination.
+
+2009/09/03 (TS):
  - drvAmdEthIpBasic.c:
-    o do 2-byte adjustment of buffer start address
+    o Do 2-byte adjustment of buffer start address
       in 'amd_send_buf_locked()'. amd_send_buf_locked() can now use
       'split-packets' where a UDP header and payload are stored in
       separate buffers.
